[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tk-trees"
description = "Tkinter hierarchy management tool"
readme = "README.md"
version = "1.12.12"
authors = [{ name = "ragardner", email = "github@ragardner.simplelogin.com" }]
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["tkinter", "table", "tree", "hierarchy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Other/Nonlisted Topic",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Homepage" = "https://github.com/ragardner/tk-trees-src"
"Bug Reports" = "https://github.com/ragardner/tk-trees-src/issues"
"Funding" = "https://github.com/ragardner"

[tool.ruff]
line-length = 120
extend-select = ["I", "F", "C4", "E", "B", "SIM"]
fix = true
ignore = ["E501", "SIM401"]
